--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT=5000
-MONGO_URI=mongodb+srv://himashree966:<db_password>@cluster0.64dgrv8.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0v
+MONGO_URI=mongodb+srv://himashree966:K883aTXDATIMLnen@cluster0.64dgrv8.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=your_secret_key
 
